--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "baluflix-backend",
+  "name": "baluflix-server",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "mongodb": "^5.7.0"
+    "mongodb": "^6.0.0",
+    "cors": "^2.8.5"
   }
 }
