--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "baluuniverseai2",
+  "name": "balubackend",
   "version": "1.0.0",
+  "description": "Baluflix backend server",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "multer": "^1.4.5",
+    "mongodb": "^5.8.0",
+    "dotenv": "^16.0.3"
   }
 }
