--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "balubackend",
   "version": "1.0.0",
-  "description": "Baluflix backend server",
   "main": "server.js",
   "type": "module",
   "scripts": {
@@ -10,7 +9,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "multer": "^1.4.5",
+    "multer": "1.4.5-lts.1",
     "mongodb": "^5.8.0",
     "dotenv": "^16.0.3"
   }
