--- a/package.json
+++ b/package.json
@@ -1,32 +1,6 @@
-{
-  "name": "baluflix",
-  "version": "1.0.0",
-  "description": "BaluFlix - simple Node/Express backend + static frontend",
-  "main": "server.js",
-  "type": "commonjs",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
-  "engines": {
-    "node": ">=18"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "mongodb": "^5.9.0",
-    "multer": "^1.4.5",
-    "body-parser": "^1.20.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
-  "keywords": [
-    "baluflix",
-    "express",
-    "node"
-  ],
-  "author": "Korra Balu",
-  "license": "ISC"
+"dependencies": {
+   "express": "^4.18.2",
+   "mongoose": "^7.0.0",
+   "multer": "^1.4.5-lts.1",
+   "cors": "^2.8.5"
 }
